# geometry_test_task

./: .gitignore  pyproject.toml
core/: __init__.py
core/any_figure/: __init__.py  test_any_figure.py
core/circle/: base.py  test_circle.py
core/rect/: __init__.py  adventure.py  base.py  test_rect.py
core/triangle/: __init__.py  adventure.py  base.py  test_triangle.py
