[tool.poetry]
name = "geometry-test-task"
version = "0.1.0"
description = ""
authors = ["Amir Mustafaev <amir.mustafaev@mentalsea.com>"]
readme = "README.md"
# packages = [{include = "geometry_test_task"}]
packages = [{include = "__init__.py"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
build = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
